--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="about-content">
                 <div class="about-image animate-on-scroll">
                     <div class="avatar-placeholder">
-                        <img src="images/miamiMe.jpg" alt="profile photo" class = "avatar-image">
+                        <img src="./images/miamiMe.jpg" alt="profile photo" class = "avatar-image">
 
                     </div>
                 </div>
