--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
             <div class="about-content">
                 <div class="about-image animate-on-scroll">
                     <div class="avatar-placeholder">
-                        <img src="https://raw.githubusercontent.com/keychainxs/keychainxs.github.io/main/Images/miamiMe.jpg"alt="profile photo" class = "avatar-image">
-
+                        <img src="https://raw.githubusercontent.com/keychainxs/keychainxs.github.io/main/Images/miamiMe.jpg" alt="profile photo" class="avatar-image">
                     </div>
                 </div>
                 <div class="about-text animate-on-scroll">
@@ -64,99 +63,86 @@
         </div>
     </section>
 
-  
-<section id="skills" class="skills">
-    <div class="container">
-        <h2 class="section-title">My Skills</h2>
-        <div class="skills-grid">
-            <div class="skill-card animate-on-scroll" data-delay="0" data-skill-level="90">
-                <h3>HTML/CSS</h3>
-                <div class="progress-container">
-                    <div class="progress-bar"></div>
+    <section id="skills" class="skills">
+        <div class="container">
+            <h2 class="section-title">My Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-card animate-on-scroll" data-delay="0" data-skill-level="90">
+                    <h3>HTML/CSS</h3>
+                    <div class="progress-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <p class="progress-text">90%</p>
                 </div>
-                <p class="progress-text">90%</p>
-            </div>
-            <div class="skill-card animate-on-scroll" data-delay="100" data-skill-level="80">
-                <h3>JavaScript</h3>
-                <div class="progress-container">
-                    <div class="progress-bar"></div>
+                <div class="skill-card animate-on-scroll" data-delay="100" data-skill-level="80">
+                    <h3>JavaScript</h3>
+                    <div class="progress-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <p class="progress-text">80%</p>
                 </div>
-                <p class="progress-text">80%</p>
-            </div>
-            <div class="skill-card animate-on-scroll" data-delay="200" data-skill-level="75">
-                <h3>React</h3>
-                <div class="progress-container">
-                    <div class="progress-bar"></div>
+                <div class="skill-card animate-on-scroll" data-delay="200" data-skill-level="75">
+                    <h3>React</h3>
+                    <div class="progress-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <p class="progress-text">75%</p>
                 </div>
-                <p class="progress-text">75%</p>
-            </div>
-            <div class="skill-card animate-on-scroll" data-delay="300" data-skill-level="85">
-                <h3>UI/UX Design</h3>
-                <div class="progress-container">
-                    <div class="progress-bar"></div>
+                <div class="skill-card animate-on-scroll" data-delay="300" data-skill-level="85">
+                    <h3>UI/UX Design</h3>
+                    <div class="progress-container">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <p class="progress-text">85%</p>
                 </div>
-                <p class="progress-text">85%</p>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-   
     <section id="projects" class="projects">
         <div class="container">
             <h2 class="section-title">My Projects</h2>
             <div class="projects-grid">
                 <div class="project-card animate-on-scroll" data-delay="0">
-                    <div class="project-image"></div>
+                    <div class="project-image blockchain">⛓️</div>
                     <div class="project-info">
-                        <h3>E-commerce Website</h3>
-                        <p class="project-category">Web Development</p>
-                        <p class="project-description">A responsive e-commerce platform with modern UI and seamless checkout experience.</p>
-                        <button class="view-project">View Project</button>
+                        <h3>Blockchain Project</h3>
+                        <p class="project-category">Blockchain Development</p>
+                        <p class="project-description">A comprehensive blockchain implementation showcasing distributed ledger technology and smart contracts.</p>
+                        <a href="https://github.com/Keychainxs/BlockChain" target="_blank" class="view-project">View Project</a>
                     </div>
                 </div>
                 <div class="project-card animate-on-scroll" data-delay="100">
-                    <div class="project-image"></div>
+                    <div class="project-image crypto">₿</div>
                     <div class="project-info">
-                        <h3>Travel App</h3>
-                        <p class="project-category">Mobile Design</p>
-                        <p class="project-description">A travel companion app with interactive maps and local recommendations.</p>
-                        <button class="view-project">View Project</button>
+                        <h3>Crypto Project</h3>
+                        <p class="project-category">Cryptocurrency Development</p>
+                        <p class="project-description">A cryptocurrency project exploring digital currency creation and blockchain integration.</p>
+                        <a href="https://github.com/Keychainxs/Crypto" target="_blank" class="view-project">View Project</a>
                     </div>
                 </div>
                 <div class="project-card animate-on-scroll" data-delay="200">
-                    <div class="project-image"></div>
+                    <div class="project-image placeholder"></div>
                     <div class="project-info">
                         <h3>Portfolio Template</h3>
                         <p class="project-category">Web Design</p>
                         <p class="project-description">A customizable portfolio template for creative professionals.</p>
-                        <button class="view-project">View Project</button>
+                        <a href="#" class="view-project">Coming Soon</a>
                     </div>
                 </div>
                 <div class="project-card animate-on-scroll" data-delay="300">
-                    <div class="project-image"></div>
+                    <div class="project-image placeholder"></div>
                     <div class="project-info">
                         <h3>Weather Dashboard</h3>
                         <p class="project-category">Web Application</p>
                         <p class="project-description">A weather dashboard with data visualization and forecasting.</p>
-                        <button class="view-project">View Project</button>
+                        <a href="#" class="view-project">Coming Soon</a>
                     </div>
                 </div>
             </div>
         </div>
-       
-        <div class="modal">
-            <div class="modal-content">
-                <span class="close-modal">&times;</span>
-                <h2 id="modal-title"> P</h2>
-                <p id="modal-category"></p>
-                <div id="modal-image"></div>
-                <p id="modal-description"></p>
-            </div>
-        </div>
     </section>
 
-    
     <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
@@ -188,7 +174,6 @@
         </div>
     </section>
 
- 
     <footer>
         <div class="container">
             <p>&copy; 2024 Portfolio. All rights reserved.</p>
